# Search-Engine

./: CMakeLists.txt  Main.cpp  README.md
includes/: ConverterJSON.h  InvertedIndex.h  SearchServer.h
resources/: config.json  file001.txt  file002.txt  requests.json
src/: ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp
tests/: InvertedIndexTest.cpp  SearchServerTest.cpp
